--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,19 @@
-html {
-    height: 100%;
+:root {
+    --doc-example-bg: #f5f5f5;
+    --doc-markup-bg: #f7f7f9;
+    --doc-panel-border-color: #e0e0e0;
+    --doc-side-hover-bg: #eee;
 }
-body {
+[data-bs-theme='dark'] {
+    --doc-markup-bg: #1b1f22;
+    --doc-example-bg: #1b1f22;
+    --doc-panel-border-color: #495057;
+    --doc-side-hover-bg: #3a2b45;
+}
+html,
+body
+{
     height: 100%;
-    /*background-color: #E0E0E0;*/
 }
 body > header {
     position: absolute;
@@ -30,9 +40,9 @@ body > footer {
 
 .content-example,
 .content-markup {
-    background-color: #f5f5f5;
+    background-color: var(--doc-example-bg);
     position: relative;
-    border: 1px solid #ccc;
+    border: 1px solid var(--doc-panel-border-color);
     min-height: 100px;
     padding: 40px 15px 15px;
 }
@@ -41,7 +51,7 @@ body > footer {
     border-radius: 4px 4px 0 0;
 }
 .content-markup {
-    background-color: #f7f7f9;
+    background-color: var(--doc-markup-bg);
     margin-top: -1px;
     border-radius: 0 0 4px 4px;
 }
@@ -150,7 +160,7 @@ pre {
 }
 #docs-sidenav > .nav li a:hover {
      text-decoration: none;
-     background-color: #eee;
+    background-color: var(--doc-side-hover-bg);
 }
 #docs-sidenav > .nav .nav li > a {padding-left: 30px;}
 #docs-sidenav > .nav .nav li > a.active {padding-left: 28px;}
